feat: rebrand to dlishe
